Updated Web Stuff
Yup

--- a/Web Thing/Vote Page/stylesheet.css
+++ b/Web Thing/Vote Page/stylesheet.css
@@ -41,7 +41,7 @@ a{
 }
 a:hover{
 		text-decoration: none;
-        color:#f68f37;
+        color:#0d2030;
 }
 a:visited{
         text-decoration: none;
